2007-12-26  Neal H. Walfield  <neal@gnu.org>

	* t-activity.c (test): Remove unused variable.

2007-12-26  Neal H. Walfield  <neal@gnu.org>

	* activity.h (activity_for_each_child): Improve comment.
	(activity_consistency_check): Remove.
	(activity_consistency_check_): Likewise.
	* activity.c (activity_consistency_check_): Remove.
	* object.c (memory_object_alloc): Remove call to
	activity_consistency_check.
	(object_find_soft): Likewise.
	(folio_free): Likewise.
	(folio_object_alloc): Likewise.

2007-12-26  Neal H. Walfield  <neal@gnu.org>

	* object.h (struct object_desc): Replace field activity_lru.prevp
	with activity_lru.prev.  Replace field global_lru.prevp with
	global_lru.prev.
	(LINK_TEMPLATE): Use circular lists.  Replace the
	object_field_link function with object_field_push and
	object_field_queue.  Require that the caller pass the head of the
	list to unlink.  Update users.

2007-12-26  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): Refactor code to eliminate gcc
	uninitialized use warnings.
	
2007-12-26  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): Refactor code to move variable
	declaration into the smallest scope in which they are used.

2007-12-26  Neal H. Walfield  <neal@gnu.org>

	* object.h: Include <hurd/btree.h>.  Don't include "activity.h".
	(struct activity): Add forward.
	(struct object_desc): Add field priority_node.
	(priority_compare): New function.
	(priorities): New btree class.
	* activity.h: Include <hurd/btree.h>.  Don't include "object.h".
	(struct activity): Add field priorities.
	* ager.c (ager_loop): Don't add discardable dirty objects to the
	inactive dirty list.
	* object.h (object_find): Take additional parameter policy.
	Update callers.
	(object_find_soft): Likewise.
	(object_desc_disown_simple): Move implementation from here...
	* object.c (object_desc_disown_simple): ... to here.  Maintain
	the activity's priority-ordered object list.
	* object.h (object_desc_disown_): Move from here...