@@ -1,3 +1,8 @@
+2007-12-27  Neal H. Walfield  <neal@gnu.org>
+
+	* object.h (LINK_TEMPLATE): Move assertion related code into the
+	assert statement.
+
 2007-12-26  Neal H. Walfield  <neal@gnu.org>
 
 	* t-activity.c (test): Remove unused variable.
